--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -18,8 +18,8 @@
     --fontweight-bold: 900;
 
     --fontsize-small: 0.7rem;
-    --fontsize-normal: 1.1rem;
-    --fontsize-large: 2rem;
+    --fontsize-normal: 1rem;
+    --fontsize-large: 1.8rem;
     --fontsize-title: 3rem;
 
     --side-margin: 350px;
@@ -41,15 +41,15 @@ body {
 /* Page Layout choices */
 .flex { display: flex; }
 
-.column {flex-direction: column;}
+.column { flex-direction: column; }
 
-.row-reverse {flex-direction: row-reverse;}
+.row-reverse { flex-direction: row-reverse; }
 
-.flex-wrap {flex-wrap: wrap;}
+.flex-wrap { flex-wrap: wrap; }
 
 .content-width { max-width: 900px; margin: 0 auto; }
 
-.flow > * { margin-top: 1rem;}
+.flow > * { margin-top: 1rem; }
 
 /* Component Layout choices */
 /* HEADER */
@@ -109,8 +109,7 @@ body {
 }
 
 .main-section__content {
-    flex-basis: 50%;
-    flex-grow: 0;
+    flex-basis: 30ch;
 }
 
 /* FOOTER */
@@ -142,7 +141,9 @@ body {
 .text-colour-light {color: var(--clr-neutral-white);}
 
 /* BLOCKS: component specific rules */
-
+.main-section__content h3 {
+    font-size: var(--fontsize-large);
+}
 /* EXCEPTIONS: variations to a block */
 
 /* MEDIA QUERIES */
