--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,6 +7,7 @@
 
     --clr-neutral-white: rgba(246, 242, 233, 1);
     --clr-neutral-black: rgba(25, 25, 25, 1);
+    --clr-neutral-black-transparent: rgba(25, 25, 25, 0.3);
     --clr-neutral-grey: rgba(88, 89, 90, 1);
 
     /* Website Fonts */
@@ -17,13 +18,13 @@
     --fontweight-heavy: 700;
     --fontweight-bold: 900;
 
-    --fontsize-small: 0.7rem;
-    --fontsize-normal: 1rem;
+    --fontsize-small: .9rem;
+    --fontsize-normal: 1.2rem;
     --fontsize-large: 1.8rem;
-    --fontsize-title: 3rem;
+    --fontsize-title: 4rem;
 
     --side-margin: 350px;
-    --content-width: 800px;
+    --content-width: 1180px;
     --flow-spacer: 1rem;
 }
 
@@ -47,44 +48,19 @@ body {
 
 .flex-wrap { flex-wrap: wrap; }
 
-.content-width { max-width: 900px; margin: 0 auto; }
+.content-width { max-width: var(--content-width); margin: 0 auto; }
 
 .flow > * { margin-top: 1rem; }
 
 /* Component Layout choices */
 /* HEADER */
-.main-header { 
-    min-height: 400px;
+.page-header { 
+    min-height: 620px;
+    padding: .5rem 0;
 
     background-image: url(../assets/images/hero-bg.jpg);
     background-size: cover;
     background-position: center;
-}
-
-.navigation {
-    justify-content: space-between;
-    align-items: flex-end;
-}
-
-.discord-logo {
-    min-width: 100px;
-}
-
-.navigation__links {
-    /* as flex-item */
-    flex-grow: 3;
-    max-width: 450px;
-
-    /* as flex-container */
-    justify-content: space-between;
-}
-
-.header__info {
-    max-width: 75ch;
-    margin: 0 auto;
-    padding: 3rem 0;
-    
-    text-align: center;
 }
 
 /* MAIN-CONTAINER */
@@ -96,21 +72,10 @@ body {
     align-items: center;
     justify-content: space-between;
 
-    min-height: 50vh;
+    min-height: 70vh;
 }
 
-.main-section__image {
-    height: 400px;
-    width: 700px;
 
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.main-section__content {
-    flex-basis: 30ch;
-}
 
 /* FOOTER */
 .footer-container {
@@ -118,7 +83,30 @@ body {
 }
 
 /* UTILITIES: One job, done well. It performs one logical job: formatting, design, shape, font and element colours  */
-.navigation__links a {
+.ui-button {
+    padding: .5rem 1.5rem;
+    border: 2px solid var(--clr-neutral-white);
+    background-color: var(--clr-neutral-white);
+
+    border-radius: 15rem;
+}
+
+.ui-button:hover {
+    color: var(--clr-primary);
+    box-shadow: 2px 5px 8px 3px var(--clr-neutral-black-transparent);
+}
+
+.header-button {
+    margin: 2rem 1rem;
+}
+
+.open-web-discord {
+    border: var(--clr-neutral-black);
+}
+
+.open-web-discord:hover {
+    border: var(--clr-neutral-black-transparent);
+    background-color: var(--clr-neutral-black-transparent);
     color: var(--clr-neutral-white);
 }
 
@@ -141,6 +129,63 @@ body {
 .text-colour-light {color: var(--clr-neutral-white);}
 
 /* BLOCKS: component specific rules */
+/* HEADER */
+.navigation {
+    justify-content: space-between;
+    align-items: center;
+
+    font-size: var(--fontsize-small);
+}
+
+.discord-logo {
+    min-width: 120px;
+}
+
+.navigation__links {
+    /* as flex-item */
+    flex-grow: 3;
+    max-width: 500px;
+
+    /* as flex-container */
+    justify-content: space-between;
+}
+
+.navigation__links a {
+    color: var(--clr-neutral-white);
+}
+
+.navigation__links a:hover {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+
+.header__info {
+    max-width: 75ch;
+    margin: 3rem auto 0rem;
+    padding: 3rem 0;
+    
+    text-align: center;
+}
+
+#page-title {
+    font-size: var(--fontsize-title);
+}
+
+
+/* MAIN CONTAINER */
+.main-section__image {
+    height: 400px;
+    width: 700px;
+
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.main-section__content {
+    flex-basis: 30ch;
+}
+
 .main-section__content h3 {
     font-size: var(--fontsize-large);
 }
